# AoC

./: .gitignore  README.md  aoc.cabal  aoc2025.cabal  create_new_day.zsh  new_day.sh  run_day.zsh
prompts/: day08.md  day09.md  day10.md  day11.md  day12.md
rust_utils/: grid.rs
rust_utils/template/: readme_benchmarks.rs  run_multi.rs
src/: Day00.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Main.hs
src/Utils/: Graph.hs  List.hs  Maze.hs  Parsers.hs  Search.hs
test/: Day00Spec.hs  Day01Spec.hs  doctests.hs
utils/: Graph.hs  Intcode.hs  List.hs  Matrix.hs  Maze.hs  Pair.hs  ParserUtils.hs  Parsers.hs  Range.hs  Search.hs  Util.hs
utils/rust_utils/: search.rs
utils/rust_utils/template/: mod.rs
utils/rust_utils/template/commands/: scaffold.rs
years/Year2019/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
years/Year2021/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
years/Year2022/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
years/Year2023/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
years/Year2023/input/sample/: Day25.txt
years/Year2024/: Cargo.toml  Day02.rs  Day03.rs  Day04.rs  Day05.rs  Day07.rs  Day11.rs  Day12.rs  Day17.rs  Day18.rs  Day19.rs  Day24.hs  Day25.hs
years/Year2024/test/: Day24Spec.hs
years/Year2025/: Day00.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs
years/Year2025/test/: Day00Spec.hs  Day01Spec.hs  GraphSpec.hs
