cabal-version:       2.2

name:                aoc
version:             0.1.0.0

license:             Unlicense
license-file:        LICENSE
author:              Ethan Welsh
maintainer:          example@example.com
copyright:           2023 Ethan Welsh
category:            Web
build-type:          Simple
extra-source-files:  README.md

executable aoc
  hs-source-dirs:      src, utils, years
  main-is:             Main.hs
  other-modules:       Parsers
                     , List
                     , Graph
                     , Maze
                     , Search
                     , Range
                     , Year2024.Day24
                     , Year2025.Day01
                     , Year2025.Day02
                     , Year2025.Day03
                     , Year2025.Day04
                     , Year2025.Day05
                     , Year2025.Day06
                     , Year2025.Day07
                     , Year2025.Day08
                     , Year2025.Day09
                     , Year2025.Day10
                     , Year2025.Day11
                     , Year2025.Day12
                     , Year2023.Day01
                     , Year2023.Day02
                     , Year2023.Day03
                     , Year2023.Day04
                     , Year2023.Day05
                     , Year2023.Day06
                     , Year2023.Day07
                     , Year2023.Day08
                     , Year2023.Day09
                     , Year2023.Day10
                     , Year2023.Day11
                     , Year2023.Day12
                     , Year2023.Day13
                     , Year2023.Day14
                     , Year2023.Day15
                     , Year2023.Day16
                     , Year2023.Day17
                     , Year2023.Day18
                     , Year2023.Day19
                     , Year2023.Day20
                     , Year2023.Day21
                     , Year2023.Day23
                     , Year2023.Day24
                     , Year2023.Day25
                     , Year2022.Day01
                     , Year2022.Day02
                     , Year2022.Day03
                     , Year2022.Day04
                     , Year2022.Day05
                     , Year2022.Day06
                     , Year2022.Day07
                     , Year2022.Day08
                     , Year2022.Day09
                     , Year2022.Day10
                     , Year2022.Day11
                     , Year2022.Day12
                     , Year2022.Day13
                     , Year2022.Day14
                     , Year2022.Day15
                     , Year2022.Day16
                     , Year2022.Day17
                     , Year2022.Day18
                     , Year2022.Day19
                     , Year2022.Day20
                     , Year2022.Day21
                     , Year2022.Day22
                     , Year2022.Day23
                     , Year2022.Day24
                     , Year2022.Day25
                     , Year2019.Day01
                     , Year2019.Day02
                     , Year2019.Day03
                     , Year2019.Day04
                     , Year2019.Day05
                     , Year2019.Day06
                     , Year2019.Day07
                     , Year2019.Day08
                     , Year2019.Day09
                     , Year2019.Day10
                     , Year2019.Day11
                     , Year2019.Day12
                     , Year2019.Day13
                     , Year2019.Day14
                     , Year2019.Day15
                     , Year2019.Day16
                     , Year2019.Day17
                     , Year2019.Day18
                     , Year2019.Day19
                     , Year2019.Day20
                     , Year2019.Day21
                     , Year2019.Day22
                     , Year2019.Day23
                     , Year2019.Day24
                     , Year2019.Day25
                     , Year2021.Day01
                     , Year2021.Day02
                     , Year2021.Day03
                     , Year2021.Day04
                     , Year2021.Day05
                     , Year2021.Day06
                     , Year2021.Day07
                     , Year2021.Day08
                     , Year2021.Day09
                     , Year2021.Day10
                     , Year2021.Day11
                     , Year2021.Day12
                     , Year2021.Day13
                     , Year2021.Day14
                     , Year2021.Day15
                     , Year2021.Day16
                     , Year2021.Day17
                     , Year2021.Day18
                     , Year2021.Day19
                     , Year2021.Day20
                     , Year2021.Day21
                     , Year2021.Day22
                     , Year2021.Day23
                     , Year2021.Day24
                     , Year2021.Day25
                     , Intcode
                     , ParserUtils
                     , Matrix
                     , Util
  default-language:    Haskell2010
  default-extensions:  TupleSections
  build-depends:       base >= 4.7 && < 5
                     , megaparsec >= 9.0 && < 10
                     , extra
                     , containers
                     , vector-algorithms
                     , vector
                     , split
                     , data-interval
                     , lens
                     , search-algorithms
                     , time
                     , range
                     , template-haskell
                     , unordered-containers
                     , directory
                     , process
                     , optparse-applicative
                     , parser-combinators
                     , text
                     , mtl
                     , vector
                     , memoize
                     , hashmap
                     , search-algorithms
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite aoc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      years/Year2025/test, src, utils, years
  main-is:             Spec.hs
  other-modules:       Day24Spec
                     , Day01Spec
                     , GraphSpec
                     , Graph
                     , List
                     , Parsers
                     , Year2025.Day01
  default-extensions:  TupleSections
  build-depends:       base >= 4.7 && < 5
                     , hspec >= 2.10 && < 3
                     , QuickCheck >= 2.14
                     , containers
                     , megaparsec
                     , memoize
                     , extra
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
