[package]
name = "advent_of_code"
version = "0.11.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
publish = false

[lib]
name = "advent_of_code"
path = "../../utils/rust_utils/lib.rs"
doctest = false

[[bin]]
name = "day01"
path = "Day01.rs"

[[bin]]
name = "day02"
path = "Day02.rs"

[[bin]]
name = "day03"
path = "Day03.rs"

[[bin]]
name = "day04"
path = "Day04.rs"

[[bin]]
name = "day05"
path = "Day05.rs"

[[bin]]
name = "day06"
path = "Day06.rs"

[[bin]]
name = "day07"
path = "Day07.rs"

[[bin]]
name = "day08"
path = "Day08.rs"

[[bin]]
name = "day09"
path = "Day09.rs"

[[bin]]
name = "day10"
path = "Day10.rs"

[[bin]]
name = "day11"
path = "Day11.rs"

[[bin]]
name = "day12"
path = "Day12.rs"

[[bin]]
name = "day15"
path = "Day15.rs"

[[bin]]
name = "day16"
path = "Day16.rs"

[[bin]]
name = "day17"
path = "Day17.rs"

[[bin]]
name = "day18"
path = "Day18.rs"

[[bin]]
name = "day19"
path = "Day19.rs"

[[bin]]
name = "day20"
path = "Day20.rs"

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]

# Template dependencies
chrono = { version = "0.4.31", optional = true }
dhat = { version = "0.3.2", optional = true }
pico-args = "0.5.0"
pathfinding = "4.12.0"
tinyjson = "2.5.1"
nom = "7.1.3"
bytes = "1.8.0"
log = "0.4.22"
indexmap = "2.6.0"
num-traits = "0.2.17"
memoize = "0.4.2"
itertools = "0.13.0"
indoc = "2.0.5"

# Solution dependencies